# haskell

./: Prime.hs
Monads/: maybe.hs  readSimple.hs  stateEmilio.hs  stateIO.hs  stateSimple.hs  writerSimple.hs
fibo/: LICENSE  fibo.cabal
fibo/src/: Fibo.hs  Main.hs  Pz8b.hs  Solver.hs  pipepar.bat  runFibo.bat
paralelo3/: README.md  paralelo3.cabal  range.htm
paralelo3/images/: pipeCompare2.htm
paralelo3/src/: Bench.hs  Pipe.hs  Reduce.hs  Task.hs
paralelo4/: README.md  paralelo4.cabal  range.htm
paralelo4/src/: Bench.hs  Main.hs  Pz8c.hs  Solver.hs
paralelo5/: README.md  paralelo5.cabal  pipe5.txt  pipe5a.txt  pipe6a.txt  pipe6b.txt  pipe7_0.txt  pipe7_20.txt  pipe7_200.txt  pipe7a 30.txt  pipe7b 0.txt  pipe7b 200.txt  pipe7b 30.txt  pipe7b0 resolve 16.txt  pipe7b0 resolve 289.txt  pipe7c by4.txt  pipe8 100.txt  pipe8 36.txt  pipe8 4.txt  pipe8.htm  pipe8.txt  range.htm  reduce 0 1 2 (1229).htm  reduce 0 1 2 (664579).htm  reduce vs pipe.htm  reduce0.txt  reduce4.txt  stats.txt  stream5.txt
paralelo5/src/: Async.hs  Bench.hs  EstudoPar.hs  EstudoPar.txt  Pipe.hs  Prime.hs  Sokoban.hs  Solver.hs  TestAsync.hs
pipepar/: README.md  pipepar.cabal
pipepar/src/: Main.hs  arq1.txt  fibo.bat  runPipepar.bat
pipepar/src/1grand2peq/: 1grande2pequeno.eventlog  arq1.txt  arq2.txt
sokoban/: LICENSE  soko 34 particionaTresh reduce async.txt  soko34 async semaf.txt  soko34 async.txt  soko34 particiona async.txt  soko34 particiona.txt  soko34 particionathresh asyncList n4.txt  soko34.txt  sokoban.cabal  sokoban.htm
sokoban/src/: 01 solver funcionando.hs  01a revisão já com o MovType .hs  01b particionado.hs  02 solver funcionando com async.hs  03 com sts' no resolve (crash) .hs  04 thread safe crash.hs  05 de volta ao início.hs  06 async de novo (problema com set).hs  07 mvar.hs  08 iorefs crash.hs  09 eOrd e 2s.hs  10 async sem particionamento.hs  11 mvars locais.hs  14 withMyVar.hs  15 IO set e Pure stSet.hs  16 guardando essa ideia caso eu precise voltar nela.hs  17 último por enquanto.hs  18 state lookupVisit.hs  19 me embananando com par e state.hs  20 semaf com particiona não mostra nenhuma vantagem .hs  21 tirar putMyVar de dentro de subloop não dá certo.hs  22 ultimo por enquanto 1.7s.hs  23 tentativa putMyVar stSet cm.hs  24 reduce com async, funciona mas não melhora.hs  25 async pipe5a.hs  26 base com IIORef nos niveis.hs  27 ensaio alcancavel.hs  28 versão push-optimal funcionando (beta).hs  29 limpando Rep0.hs  Bench.hs  Pipe.hs  Rep0.hs  Sokoban.hs  main.hs
statesokoban/: README.md  asynk.EXE.eventlog  range.htm  statesokoban.EXE.eventlog  statesokoban.cabal
statesokoban/src/: Asynkoban.hs  Bench.hs  Main.hs  Rep0.hs  Sokoban.hs  State.hs
