name:                fibo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Alekhinne/fibo#readme
license:             BSD3
license-file:        LICENSE
author:              Elsio Antunes Jr
maintainer:          tksmkd@gmail.com
copyright:           2020 Elsio Antunes Jr
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md




executable fibo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -eventlog
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Pz8b, Fibo, Solver
  default-language:    Haskell2010

  build-depends:       base >= 4.7 && < 5,
                       time
                                              
                       -- This provides the interface which monad-par implements:
                       , monad-par
                       , abstract-par 
                       , abstract-deque >= 0.1.4
                       
                       -- Extras such as parMap, RNG, State
                       
                       , monad-par-extras >= 0.3
                       , deepseq >= 1.1
                       , array >= 0.3
                       , mwc-random >= 0.11
                       , containers
                       , parallel >= 3.1
                       , mtl >= 2.0.1.0  
  
  
