name:                paralelo3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Alekhinne/paralelo2#readme
license:             BSD3
license-file:        LICENSE
author:              Elsio Antunes Jr
maintainer:          tksmkd@gmail.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Pipe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Pipe
  hs-source-dirs:      src
  main-is:             Pipe.hs
  default-language:    Haskell2010
  other-modules:       Task
  build-depends:       base >= 4.7 && < 5,
                       time
                       , process >= 1.6.9.0
                                              
                       -- This provides the interface which monad-par implements:
                       , monad-par
                       , abstract-par 
                       , abstract-deque >= 0.1.4
                       
                       -- Extras such as parMap, RNG, State
                       
                       , monad-par-extras >= 0.3
                       , deepseq >= 1.1
                       , array >= 0.3
                       , mwc-random >= 0.11
                       , containers
                       , parallel >= 3.1
                       , mtl >= 2.0.1.0  

executable Reduce
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Reduce
  hs-source-dirs:      src
  main-is:             Reduce.hs
  default-language:    Haskell2010
  other-modules:       Task
  build-depends:       base >= 4.7 && < 5,
                       time
                       , process >= 1.6.9.0
                                              
                       -- This provides the interface which monad-par implements:
                       , monad-par
                       , abstract-par 
                       , abstract-deque >= 0.1.4
                       
                       -- Extras such as parMap, RNG, State
                       
                       , monad-par-extras >= 0.3
                       , deepseq >= 1.1
                       , array >= 0.3
                       , mwc-random >= 0.11
                       , containers
                       , parallel >= 3.1
                       , mtl >= 2.0.1.0  


executable Bench
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Bench
  hs-source-dirs:      src
  main-is:             Bench.hs
  default-language:    Haskell2010
  other-modules:       Pipe, Task, Reduce
  build-depends:       base >= 4.7 && < 5
                       , time
                       , process >= 1.6.9.0
                                              
                       -- This provides the interface which monad-par implements:
                       , monad-par
                       , abstract-par 
                       , abstract-deque >= 0.1.4
                       
                       -- Extras such as parMap, RNG, State
                       
                       , monad-par-extras >= 0.3
                       , deepseq >= 1.1
                       , array >= 0.3
                       , mwc-random >= 0.11
                       , containers
                       , parallel >= 3.1
                       , mtl >= 2.0.1.0  
                     , criterion



