name:                paralelo4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Alekhinne/paralelo2#readme
license:             BSD3
license-file:        LICENSE
author:              Elsio Antunes Jr
maintainer:          tksmkd@gmail.com
copyright:           2021 Elsio Antunes Jr
category:            Computations
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable paralelo4
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Pz8c, Async, Solver
  build-depends:       base >= 4.7 && < 5
                     , time
                     , deepseq
                     , parallel
                     , stm
                     , random
                     , process
                     
                     , directory
                     , filepath



executable bench
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Bench
  hs-source-dirs:      src
  main-is:             Bench.hs
  default-language:    Haskell2010
  other-modules:       Pz8c, Async, Solver
  build-depends:       base >= 4.7 && < 5
                     , time
                     , deepseq
                     , parallel
                     , stm
                     , random
                     , process
                     
                     , directory
                     , filepath
                     , criterion




                     
