name:                sokoban
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sokoban#readme
license:             BSD3
license-file:        LICENSE
author:              Elsio Antunes
maintainer:          tksmkd@gmail.com
copyright:           2021 Elsio Antunes
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sokoban
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Sokoban, Rep0
  build-depends:       base >= 4.7 && < 5
                     , time
                     , process
                     , async
                     , monad-par
                     , deepseq


executable asynkoban
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Asynkoban
  hs-source-dirs:      src
  main-is:             Asynkoban.hs
  default-language:    Haskell2010
  other-modules:       Sokoban, Rep0
  build-depends:       base >= 4.7 && < 5
                     , time
                     , process
                     , async
                     , monad-par
                     , deepseq


executable pipe
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Pipe
  hs-source-dirs:      src
  main-is:             pipe.hs
  default-language:    Haskell2010
  other-modules:       Sokoban, Rep0
  build-depends:       base >= 4.7 && < 5
                     , time
                     , process
                     , async
                     , monad-par
                     , deepseq


executable bench
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Bench
  hs-source-dirs:      src
  main-is:             Bench.hs
  default-language:    Haskell2010
  other-modules:       Sokoban, Main, Rep0, Asynkoban
  build-depends:       base >= 4.7 && < 5
                     , time
                     , process
                     , async
                     , monad-par
                     , deepseq
                     , criterion
