name:                statesokoban
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/statesokoban#readme
license:             BSD3
license-file:        LICENSE
author:              Elsio Antunes
maintainer:          tksmkd@gmail.com
copyright:           2021 Elsio Antunes
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable statesokoban
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is State
  hs-source-dirs:      src
  main-is:             State.hs
  other-modules:       Sokoban, Rep0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,ghc-prim
                      ,time
                      ,process
                      ,deepseq
                      , async
                      , monad-par
                      
executable asynk
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Asynkoban
  hs-source-dirs:      src
  main-is:             Asynkoban.hs
  other-modules:       Sokoban, Rep0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,ghc-prim
                      ,time
                      ,process
                      ,deepseq
                      , async
                      , monad-par
                      


executable bench
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog -main-is Bench
  hs-source-dirs:      src
  main-is:             Bench.hs
  other-modules:       Sokoban, Rep0, Asynkoban
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , ghc-prim
                      , time
                      , process
                      , deepseq
                      , async
                      , monad-par
                      , criterion
                      
